# autoserv

./: 123  Makefile  alembic.ini  pyproject.toml
api/: main.py
api/dependencies/: auth.py  db.py
api/exceptions/: __init__.py  errors.py
api/middlewares/: __init__.py  auth.py  logging.py
api/routers/: admin.py  auth.py  offers.py  requests.py  service_profile.py
api/schemas/: __init__.py  admin.py  auth.py  base.py  offer.py  request.py  service_profile.py
api/services/: admin.py  auth.py  common.py  notifications.py  offers.py  requests.py  service_profile.py
bot/: api_client.py  main.py
bot/handlers/: internal.py
bot/handlers/service/: __init__.py  offers.py  profile.py  requests.py  start.py
bot/handlers/user/: __init__.py  create_request.py  my_requests.py  offers.py  start.py
bot/keyboards/: service.py  user.py
bot/states/: service.py  user.py
bot/utils/: sender.py
common/config/: settings.py
common/migrations/: env.py
common/migrations/versions/: 0001_initial_schema.py  0002_add_user_is_blocked.py
common/models/: __init__.py  base.py  car_request.py  database.py  enums.py  offer.py  service_profile.py  user.py
docker/: Dockerfile.api  Dockerfile.bot  docker-compose.override.yml  docker-compose.yml
tests/api/: conftest.py  test_admin.py  test_auth.py  test_auth_service.py  test_health.py  test_middleware_auth.py  test_notifications.py  test_offers.py  test_requests.py  test_schemas.py  test_service_profile.py
tests/bot/: conftest.py  test_internal.py  test_sender.py
tests/common/: test_settings.py
