[tool.poetry]
name = "autoservice"
version = "1.0.0"
description = "SaaS автосервис через Telegram-бот — MVP v1.0"
authors = ["Team <team@autoservice.local>"]

[tool.poetry.dependencies]
python = "^3.12"

# API
fastapi = "^0.115"
uvicorn = { version = "^0.32", extras = ["standard"] }
pydantic = "^2.9"
pydantic-settings = "^2.5"

# DB
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.30"
alembic = "^1.14"

# Bot
aiogram = "^3.14"
redis = { version = "^5.2", extras = ["asyncio"] }

# Utils
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-mock = "^3.14"
httpx = "^0.28"          # AsyncClient for FastAPI tests
anyio = "^4.6"
ruff = "^0.8"
mypy = "^1.13"
coverage = { version = "^7.6", extras = ["toml"] }
watchdog = { version = "^6.0", extras = ["watchmedo"] }   # bot hot-reload in dev
aiosqlite = "^0.20"   # in-memory SQLite for tests (no PostgreSQL required)

[tool.poetry.group.test.dependencies]
# Shared with dev — all in dev group

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["bot", "api", "common"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
]
ignore = ["B008"]  # do not perform function calls in default args (FastAPI Depends)

[tool.ruff.lint.isort]
known-first-party = ["common", "api", "bot"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["api", "bot", "common"]
omit = ["*/tests/*", "*/migrations/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
